@@ -120,7 +120,7 @@
 - (void)deleteBackward:(id)sender;
 - (void)deleteForward:(id)sender;
 - (void)textViewDidChangeSelection: (NSNotification *) aNotification;
-- (void)textViewResized: (PTYTextView *) textView;
+- (void)textViewResized: (NSNotification *) aNotification;
 - (void)tabViewWillRedraw: (NSNotification *) aNotification;
 
 
