@@ -54,9 +54,12 @@
     BOOL windowInited;
 	BOOL sendInputToAllSessions;
 	BOOL fontSizeFollowWindowResize;
+	BOOL suppressContextualMenu;
 	
 	BOOL EXIT;
 }
+
++ (NSSize) viewSizeForColumns: (int) columns andRows: (int) rows withFont: (NSFont *) aFont;
 
 - (id)init;
 - (id) initWithWindowNibName: (NSString *) windowNibName;
@@ -139,6 +142,8 @@
 
 // Contextual menu
 - (void) menuForEvent:(NSEvent *)theEvent menu: (NSMenu *) theMenu;
+- (BOOL) suppressContextualMenu;
+- (void) setSuppressContextualMenu: (BOOL) aBool;
 
 // Close Window
 - (BOOL)showCloseWindow;
