@@ -106,6 +106,37 @@ static unsigned int windowPositions[CACHED_WINDOW_POSITIONS];
     return ([self initWithWindowNibName: @"PseudoTerminal"]);
 }
 
++ (NSSize) viewSizeForColumns: (int) columns andRows: (int) rows withFont: (NSFont *) aFont
+{
+	NSParameterAssert(aFont != nil);
+	NSParameterAssert (columns != 0);
+	NSParameterAssert (rows != 0);
+	
+	int cw, ch;
+	NSMutableDictionary *dic = [NSMutableDictionary dictionary];
+    NSSize sz, textViewSize, scrollViewSize, tabViewSize;
+	
+    [dic setObject:aFont forKey:NSFontAttributeName];
+    sz = [@"W" sizeWithAttributes:dic];
+	
+	cw = sz.width;
+	ch = [aFont defaultLineHeightForFont];
+	
+	textViewSize.width = cw * columns + MARGIN * 2;
+	textViewSize.height = ch * rows;
+	
+	scrollViewSize = [PTYScrollView frameSizeForContentSize:textViewSize
+							hasHorizontalScroller:NO
+							  hasVerticalScroller:YES
+									   borderType:NSNoBorder];
+	
+	tabViewSize = scrollViewSize;
+	tabViewSize.height = scrollViewSize.height + 20;
+
+	return (tabViewSize);
+
+}
+
 // Do not use both initViewWithFrame and initWindow
 // initViewWithFrame is mainly meant for embedding a terminal view in a non-iTerm window.
 - (PTYTabView*) initViewWithFrame: (NSRect) frame
@@ -1108,7 +1139,6 @@ static unsigned int windowPositions[CACHED_WINDOW_POSITIONS];
 - (void)windowDidResize:(NSNotification *)aNotification
 {
     NSRect frame;
-    int i, w, h;
 	
 #if DEBUG_METHOD_TRACE
     NSLog(@"%s(%d):-[PseudoTerminal windowDidResize: width = %f, height = %f]",
@@ -1135,42 +1165,23 @@ static unsigned int windowPositions[CACHED_WINDOW_POSITIONS];
 			nafont = [self _getMaxFont:nafont height:frame.size.height lines:HEIGHT];
 			
 			[self setFont:font nafont:nafont];
-			//[self resizeWindow:WIDTH height:HEIGHT];
 			NSString *aTitle = [NSString stringWithFormat:@"%@ (@%.0f)", [[_sessionMgr currentSession] name], [font pointSize]];
 			[self setWindowTitle: aTitle];    
-			//for(i=0;i<[_sessionMgr numberOfSessions]; i++) {
-			//	[[[_sessionMgr sessionAtIndex:i] TEXTVIEW] setFrameSize:frame.size];		
-			//}
 			[self setWindowSize: YES];
 
 		}
-		w = (int)((frame.size.width - MARGIN * 2)/charWidth);
-		h = (int)(frame.size.height/charHeight);
-		if (w!=WIDTH || h!=HEIGHT) {
-			for(i=0;i<[_sessionMgr numberOfSessions]; i++) {
-				[[[_sessionMgr sessionAtIndex:i] SCREEN] resizeWidth:w height:h];
-				[[[_sessionMgr sessionAtIndex:i] SHELL] setWidth:w  height:h];
-			}
-		}
+		
 	}
 	else {	    
-		w = (int)((frame.size.width - MARGIN * 2)/charWidth);
-		h = (int)(frame.size.height/charHeight);
-
-		for(i=0;i<[_sessionMgr numberOfSessions]; i++) {
-			[[[_sessionMgr sessionAtIndex:i] SCREEN] resizeWidth:w height:h];
-			[[[_sessionMgr sessionAtIndex:i] SHELL] setWidth:w  height:h];
-		}
 		
-		WIDTH = w;
-		HEIGHT = h;
+		WIDTH = (int)((frame.size.width - MARGIN * 2)/charWidth);
+		HEIGHT = (int)(frame.size.height/charHeight);
+		
 		// Display the new size in the window title.
 		NSString *aTitle = [NSString stringWithFormat:@"%@ (%d,%d)", [[_sessionMgr currentSession] name], WIDTH, HEIGHT];
 		[self setWindowTitle: aTitle];    
 	}	
-	// Reset the scrollbar to the bottom
-    [[[_sessionMgr currentSession] TEXTVIEW] scrollEnd];
-	
+
 	// Post a notification
     [[NSNotificationCenter defaultCenter] postNotificationName: @"iTermWindowDidResize" object: self userInfo: nil];    
 	
@@ -1244,10 +1255,10 @@ static unsigned int windowPositions[CACHED_WINDOW_POSITIONS];
     int i;
     NSSize vsize;
 	
-#if DEBUG_METHOD_TRACE
+//#if DEBUG_METHOD_TRACE
     NSLog(@"%s(%d):-[PseudoTerminal resizeWindow:%d,%d]",
           __FILE__, __LINE__, w, h);
-#endif
+//#endif
     
     vsize.width = charWidth * w + MARGIN *2;
 	vsize.height = charHeight * h;
@@ -1264,6 +1275,16 @@ static unsigned int windowPositions[CACHED_WINDOW_POSITIONS];
 }
 
 // Contextual menu
+- (BOOL) suppressContextualMenu
+{
+	return suppressContextualMenu;
+}
+
+- (void) setSuppressContextualMenu: (BOOL) aBool
+{
+	suppressContextualMenu = aBool;
+}
+
 - (void) menuForEvent:(NSEvent *)theEvent menu: (NSMenu *) theMenu
 {
     unsigned int modflag = 0;
@@ -1276,7 +1297,7 @@ static unsigned int windowPositions[CACHED_WINDOW_POSITIONS];
     NSLog(@"%s(%d):-[PseudoTerminal menuForEvent]", __FILE__, __LINE__);
 #endif
 	
-    if(theMenu == nil)
+    if(theMenu == nil || suppressContextualMenu)
 		return;
 	
     modflag = [theEvent modifierFlags];
